# ti-am62x-binding-rs

./: Cargo.toml  Fulup-README
afb-binding/: Cargo.toml
afb-binding/etc/: binder-am62x.json  binding-desktop-debug.json  binding-test.sh  binding-ti-am62x.json  build.rs  start-binder.sh
afb-binding/src/: binding.rs  libso.rs  verbs.rs
afb-types/src/: am62x-types.rs  libso.rs
src/: build.rs  ti-am62x-libso.rs
src/afb-binding/: ti-am62x-binding.rs  ti-am62x-verbs.rs
src/afb-binding/etc/: binding-test.sh
src/i2c/: i2c-access.c  i2c-access.h
src/protobuf/: high_to_low.proto  ti-am62x-codec.rs
src/rpmsg-capi/: ti-rpmsg-map.h  ti-rpmsg-mod.rs
ti-rpmsg/: Cargo.toml
ti-rpmsg/capi/: build.rs  capi-mod.rs
ti-rpmsg/protobuf/: high_to_low.proto  ti-am62x-codec.rs
ti-rpmsg/src/: libso.rs  ti-rpmsg.rs
ti-rpmsg/test/: test-proto.rs
